[package]
name = "transaction-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
csv = "1.1.0"
num = "0.4.0"
rust_decimal = "1.25"

[dependencies.clap]
version = "3.2.15"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
serde_json = "1"
